--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,24 @@ font-family: "Nunito", sans-serif;
 background: #354259; 
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: var(--brown);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--gold);
+}
+
 .nav {
 display: flex;
 flex-direction: column;
