--- a/styles.css
+++ b/styles.css
@@ -384,7 +384,8 @@ flex-direction: column;
 padding: 20px;
 border-radius: 15px;
 }
-
+input,
+textarea,
 #contact-btn {
 padding: 12px;
 margin: 10px;
@@ -430,61 +431,76 @@ color: var(--green);
 .man {
 display: none;
 }
+
 .nav {
 display: none;
 }
+
 .face {
 display: none;
 }
+
 .baki { 
 display: none;
 }
+
 .intro {
 min-height: unset;
 padding-left: unset;
 margin: 0;
 align-items: center;
 }
+
 .intro-title {
 font-size: 40px;
 text-align: center;
 }
+
 .intro-sub {
 margin-top: -30px;
 text-align: center;
 }
+
 .intro-desc {
 font-size: 18px;
 text-align: center;
 max-width: 100%;
 }
+
 .tech-stack {
 padding: unset;
 }
+
 #stack {
 padding: 0;
 grid-template-columns: repeat(2, minmax(120px, 10px));
 }
+
 #job-desc li {
 font-size: 20px;
 text-align: left;
 }
+
 .everything {
 padding: 10px;
 width: 95%;
 }
+
 .about-me {
 padding-top: 25px;
 padding-left: 5%;
 padding-right: 5%;
 }
+
 .about-me h1 {
 font-size: 25px;
 padding-bottom: unset;
 }
+
 #about h1:after {
 display: none;
 }
+
 #contact-btn {
 width: unset;
 }
