--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,11 @@ font-family: "Nunito", sans-serif;
 background: var(--dark);
 background-image: url(/image/Background.4.png); 
 background-attachment: fixed;
+background-position: center;
+background-attachment: fixed;
 background-repeat: no-repeat;
 background-size: cover;
-background-position: center;
+}
 }
 
 
