--- a/profile/profile.css
+++ b/profile/profile.css
@@ -1,97 +1,224 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+
 :root {
-    --dark: #354259;
-    --darkigh: #48597585;
-    --brown: #cdc2ae;
-    --gold: #ece5c7;
-    --green: #c2ded1;
-    --dgreen: #97aca2;
-  }
-  
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  body {
+  --dark: #1d232e;
+  --darkigh: #39465c85;
+  --brown: #cdc2ae;
+  --gold: #ece5c7;
+  --yellow: #ffd230e1;
+  --green: #c2ded1;
+  --dgreen: #97aca2;
+  --white: #a0abba;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  font-size: 12px;
+  font-family: "Nunito", sans-serif;
+  background: var(--dark);
+  background-image: url(/image/background-lilith.png);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.profile-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  width: 88px;
+  height: 88px;
+  background-color: var(--brown);
+  margin-left: 225px;
+  margin-top: 50px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.514);
+}
+
+.profile-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profile-image input[type="file"] {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.profile-container {
+  display: flex;
+  align-items: center;
+}
+
+.profile-name {
+  text-align: right;
+  margin-left: 25px;
+  margin-top: 40px;
+}
+
+.profile-name h1 {
+  margin: 0;
+  color: var(--yellow);
+  transition: color 0.3s ease;
+  margin-right: 80px;
+}
+
+.profile-name h1:hover {
+  text-shadow: 0 0 5px var(--yellow);
+}
+
+.profile-name h1 a {
+  text-decoration: none;
+  color: var(--yellow);
+}
+
+.profile-name h1 a:hover {
+  text-decoration: hidden;
+}
+
+.name-icon {
+  height: 0.8em;
+  width: auto;
+  margin-left: 5px;
+  fill: var(--yellow);
+  transition: filter 0.3s ease;
+}
+
+.name-icon:hover {
+  filter: drop-shadow(0 0 2.3px var(--yellow));
+}
+
+.name-icon-container {
+  display: inline-block;
+  position: relative;
+}
+
+.name-icon-text {
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--white);
+  font-size: 12px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  user-select: none;
+  pointer-events: none;
+}
+
+
+.name-icon-container:hover .name-icon-text {
+  opacity: 1;
+  filter: none;
+  text-shadow: none;
+}
+
+
+.profile-title {
+  display: flex;
+  align-items: center;
+  color: var(--white);
+}
+
+.profile-title svg {
+  height: 1em;
+  margin-right: 5px;
+  margin-top: 5px;
+}
+
+.profile-title span {
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+@media (max-width: 768px) {
+  .profile-image {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     margin: 0;
-    font-size: 12px;
-    font-family: "Nunito", sans-serif;
-    background: var(--dark);
-    background-image: url(/image/Background.4.png);
-    background-attachment: fixed;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
-  
-  .profile {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: var(--darkigh);
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .profile h1 {
-    text-align: center;
-    color: var(--gold);
-    margin-bottom: 10px;
-  }
-  
-  .profile .profile-picture-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .profile .profile-picture-container img {
-    display: block;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+
+  .profile-image img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    object-position: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
   }
-  
-  .profile .profile-picture-container input[type="file"] {
+
+  .profile-name {
+    position: absolute;
+    top: 150px;
+    left: 10px;
+    text-align: center;
+    margin: 0;
+    width: 100%;
+  }
+
+  .profile-name h1 {
+    margin: 0;
+    font-size: 16px;
+    color: var(--yellow);
+    transition: text-shadow 0.3s ease;
+  }
+
+  .profile-name:hover h1 {
+    text-shadow: none;
+  }
+
+  .name-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    position: relative;
+    width: fit-content;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .name-icon {
+    height: 0.8em;
+    width: auto;
+    fill: var(--yellow);
+    transition: filter 0.3s ease;
+  }
+
+  .name-icon-container:hover .name-icon-text {
+    opacity: 1;
+    filter: none;
+    text-shadow: none;
+  }
+
+  .name-icon-text {
+    font-size: 12px;
+    color: var(--white);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    user-select: none;
+    pointer-events: none;
+    margin-left: 5px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
     display: none;
   }
-  
-  .profile p {
-    text-align: center;
-    color: var(--dgreen);
-    margin-bottom: 20px;
+
+  .name-icon-container:hover .name-icon-text {
+    display: block;
   }
-  
-  .profile ul {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-  }
-  
-  .profile ul li {
-    display: inline-block;
-    margin: 0 10px;
-    font-size: 18px;
-    color: var(--dgreen);
-  }
-  
-  .profile ul li a {
-    text-decoration: none;
-    color: var(--dgreen);
-  }
-  
-  .profile ul li a:hover {
-    color: var(--dark);
-  }
-  
-  .profile ul li img {
-    width: 16px; /* Adjust the width as desired */
-    height: 16px; /* Adjust the height as desired */
-    margin-right: 5px;
-    color: var(--gold); /* Set the color to "--gold" */
-  }
+}
+
