fixing the web 20-24-11-03

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ margin: 0;
 font-size: 12px;
 font-family: "Nunito", sans-serif;
 background: var(--dark);
-background-image: url(/HTML&CSS/HamzaSharif/Images/background/Background.4.png  ); 
+background-image: url(/Images/background/Background.4.png); 
 background-position: center;
 background-attachment: fixed;
 background-repeat: no-repeat;
